# fitness-coach-backend

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/analysis/: engine.py
app/analysis/exercises/: pushup.py  squat.py
app/api/: rest.py  ws.py
app/core/: auth.py  config.py  logging.py
app/feedback/: generator.py  policy.py
fitness_coach_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: simulate_session.py
tests/: test_edge_cases_and_false_positives.py  test_form_detection_with_joints.py  test_geometry.py  test_pushup_rep_counting.py  test_rep_scoring_and_issues.py  test_robustness_controls.py  test_squat_rep_counting.py
