[project]
name = "fitness-coach-backend"
version = "0.1.0"
description = "Real-Time AI Fitness Coaching Backend (REST + WebSocket)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

